# hyper-webgl

./: Cargo.toml
src/: lib.rs  main.rs  obj_parse.rs
src/shaders/: fragment.glsl  vertex.glsl
web/: bun.lockb  package.json  tsconfig.json  webpack.config.js
web/src/: index.html  index.ts  lib.ts
