[package]
name = "hyper-webgl"
version = "0.1.0"
authors = ["XP2"]
description = "Hyperbolic visualisation in WebGl"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.66"
nalgebra-glm = "0.18.0"
wasm-bindgen = "0.2.89"
[dependencies.web-sys]
version = "0.3.66"
features = [
  'Document', 
  'Window', 
  'Performance',
  'Element',
  'HtmlCanvasElement' ,
  'EventTarget',
  'WebGlVertexArrayObject',
  'WebGlRenderingContext', 
  'WebGl2RenderingContext', 
  'WebGlProgram', 
  'WebGlShader', 
  'WebGlBuffer', 
  'WebGlUniformLocation'
]
